# 1.12.2-1.1
* Items in mega chests now have their tooltips rendered correctly.
* Buffed mining xp for ores again.
* Tall grass will no longer ding from botany.
* Nerfed seduce villager, allows reducing total trade cost by half.
* Buffed blacksmithing xp for repairing items.
* Buffed blacksmithing xp for non-gold items.
* Glazed terracota now gives blacksmithing xp.
* Drill no longer triggers on activateable blocks (chests, furances, crafting table e.t.c). Sorry!
* Fixed an issue with an artifact (no-spoilers) causing the game to crash when hovered over.
* Farmers tan now provides speed instead of saturation.
* Fixed a bug where you weren't able to craft dispensers.
* Added a recipe for saddles!